@@ -1,4 +1,4 @@
-/*	$NetBSD: talkd.c,v 1.10 1998/07/06 06:49:16 mrg Exp $	*/
+/*	$NetBSD: talkd.c,v 1.10.10.1 2002/09/19 15:05:45 itojun Exp $	*/
 
 /*
  * Copyright (c) 1983, 1993
@@ -43,7 +43,7 @@ __COPYRIGHT("@(#) Copyright (c) 1983, 1993\n\
 #if 0
 static char sccsid[] = "@(#)talkd.c	8.1 (Berkeley) 6/4/93";
 #else
-__RCSID("$NetBSD: talkd.c,v 1.10 1998/07/06 06:49:16 mrg Exp $");
+__RCSID("$NetBSD: talkd.c,v 1.10.10.1 2002/09/19 15:05:45 itojun Exp $");
 #endif
 #endif /* not lint */
 
@@ -94,6 +94,7 @@ main(argc, argv)
 {
 	CTL_MSG *mp = &request;
 	int cc, ch;
+	struct sockaddr ctl_addr;
 	extern char *__progname;
 
 	openlog("talkd", LOG_PID, LOG_DAEMON);
@@ -122,6 +123,7 @@ main(argc, argv)
 	signal(SIGALRM, timeout);
 	alarm(TIMEOUT);
 	for (;;) {
+		memset(&response, 0, sizeof(response));
 		cc = recv(0, (char *)mp, sizeof (*mp), 0);
 		if (cc != sizeof (*mp)) {
 			if (cc < 0 && errno != EINTR)
@@ -130,10 +132,16 @@ main(argc, argv)
 		}
 		lastmsgtime = time(0);
 		process_request(mp, &response);
+
+		(void)memcpy(&ctl_addr, &mp->ctl_addr, sizeof(ctl_addr));
+		ctl_addr.sa_family = mp->ctl_addr.sa_family;
+		ctl_addr.sa_len = sizeof(ctl_addr);
+		if (ctl_addr.sa_family != AF_INET)
+			continue;
+
 		/* can block here, is this what I want? */
-		cc = sendto(sockt, (char *)&response,
-		    sizeof (response), 0, (struct sockaddr *)&mp->ctl_addr,
-		    sizeof (mp->ctl_addr));
+		cc = sendto(sockt, (char *)&response, sizeof (response), 0,
+		    &ctl_addr, sizeof (ctl_addr));
 		if (cc != sizeof (response))
 			syslog(LOG_WARNING, "sendto: %m");
 	}
@@ -143,8 +151,10 @@ void
 timeout(n)
 	int n;
 {
+	int save_errno = errno;
 
 	if (time(0) - lastmsgtime >= MAXIDLE)
 		_exit(0);
 	alarm(TIMEOUT);
+	errno = save_errno;
 }
